[package]
name = "coredump_bot"
version = "0.2.7"
authors = [
  "Stefan Schindler <stefan@estada.ch>"
]

[dependencies]
log = "^0.3"
env_logger = "^0.3"
telegram-bot = "^0.4"
#telegram-bot = { git = "https://github.com/dns2utf8/telegram-bot.git", branch = "api_2.0" }
hyper = "^0.8"
rustc-serialize = "^0.3"
spaceapi = "^0.2"
#{ git = "https://github.com/coredump-ch/spaceapi-rs.git", branch = "master" }
